--- a/index.html
+++ b/index.html
@@ -8,25 +8,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Terans Swasembada</title>
+
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
-    <img src="Logo_revou.png"
-            width="80px" alt="Logo RevoU" 
-            style="margin-bottom: 10px;margin-left: 10px;"
-
-    <div class="Navbar">
-        <a href="#home">Home</a>
-        <a href="#Our Profile">Our Profile</a>
-        <a href="#Portofolio">Portofolio</a>
-        <a href="#Message Us">Message Us</a>
-    </div>
+    <!--Header-->
+    <nav class="navbar">
+        <div class="logo-container">
+            <img class="logo" src="images/lovepik.png" width="100px" alt="Logo">
+        </div>
+        <ul class="nav-menu">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Our Profile</a></li>
+            <li><a href="#">Portofolio</a></li>
+            <li><a href="#">Message Us</a></li>
+        </ul>
+    </nav>
 
     <div class="Header">
         <h1>Hi "name", Welcome to The Website</h1>
         <p>Ini adalah website latihan RevoU</p>
     </div>
 
+    <!--Main Content-->
     <div class="hq-section">
         <h2>Our Headquarter</h2>
 
@@ -102,14 +108,14 @@
             </div>        
         </div>
     
-    <div 
+    <div>
 
     </div>
-
+    <!--Footer-->    
     <foooter>
         <p>Created by Terans</p>
     </foooter>
-<script src="js/script.js"></script>
 
+<script src="js/script.js"></script>
 </body>
 </html>
